# xmonad

./: .gitignore  .gitmodules  README.org  build  config  config.ini  my-xmonad.cabal  polybar-config.ini  run-polybar  run-xmonad  shell.nix  stack.yaml  todo.org  wallpaper_switcher  xmobarrc.hs  xmonad.hs
