name:                my-xmonad
version:             0.1.0.0
license:             MIT
author:              Daniel Levy
maintainer:          daniellevymoreno@gmail.com
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >= 1.10

executable xmonad
  main-is:             xmonad.hs
--  other-modules:
  build-depends:       base
                     , X11
                     , utf8-string
                     , dbus >= 1.2.14
                     , xmonad
                     , xmonad-contrib
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -threaded
                       -haddock
                       -O2
                       -funbox-strict-fields
                       -fno-warn-unused-do-bind
